crates/psptool-cli/tests/snapshots/synthetic__list_default_synthetic.snap
---
source: crates/psptool-cli/tests/synthetic.rs
expression: stdout
---
+-----+------+----------+---------+---------------+
| ROM | Addr |   Size   |   FET   |     AGESA     |
+-----+------+----------+---------+---------------+
|  0  | 0x0  | 0x800000 | 0x20000 | AGESA_UNKNOWN |
+-----+------+----------+---------+---------------+

+--+-----------+---------+------------+-------+---------------------+
|  | Directory |  Addr   | Generation | Magic | Secondary Directory |
+--+-----------+---------+------------+-------+---------------------+
|  |     0     | 0x20040 |            | $PSP  |                     |
+--+-----------+---------+------------+-------+---------------------+
+--+---+-------+---------+-------+------------------------+------------+----------+----------+--------------+---------------------+
|  |   | Entry | Address | Size  |          Type          | Subprogram | Instance | Magic/ID | File Version |      File Info      |
+--+---+-------+---------+-------+------------------------+------------+----------+----------+--------------+---------------------+
|  |   |     0 | 0x20080 | 0x240 |     AMD_PUBLIC_KEY~0x0 |          0 |        0 | a1a1a1a1 |              |       AMD_CODE_SIGN |
|  |   |     1 | 0x20300 | 0x210 | PSP_FW_BOOT_LOADER~0x1 |          0 |        0 |     $PS1 |  00.00.00.00 | signed, SIG_UNKNOWN |
+--+---+-------+---------+-------+------------------------+------------+----------+----------+--------------+---------------------+
