crates/psptool-cli/tests/snapshots/synthetic__list_verbose_synthetic.snap
---
source: crates/psptool-cli/tests/synthetic.rs
expression: stdout
---
+-----+------+----------+---------+---------------+
| ROM | Addr |   Size   |   FET   |     AGESA     |
+-----+------+----------+---------+---------------+
|  0  | 0x0  | 0x800000 | 0x20000 | AGESA_UNKNOWN |
+-----+------+----------+---------+---------------+

+--+-----------+---------+------------+-------+---------------------+
|  | Directory |  Addr   | Generation | Magic | Secondary Directory |
+--+-----------+---------+------------+-------+---------------------+
|  |     0     | 0x20040 |            | $PSP  |                     |
+--+-----------+---------+------------+-------+---------------------+
+--+---+-------+---------+-------+------------------------+------------+----------+----------+--------------+---------------------+-------+----------------------------------+-------------+-----------+-------------+-----------+
|  |   | Entry | Address | Size  |          Type          | Subprogram | Instance | Magic/ID | File Version |      File Info      | flags |               MD5                | size_signed | size_full | size_packed | load_addr |
+--+---+-------+---------+-------+------------------------+------------+----------+----------+--------------+---------------------+-------+----------------------------------+-------------+-----------+-------------+-----------+
|  |   |     0 | 0x20080 | 0x240 |     AMD_PUBLIC_KEY~0x0 |          0 |        0 | a1a1a1a1 |              |       AMD_CODE_SIGN |   0x0 | fe857012f732463cc9fc9f329d062c4a |             |           |             |           |
|  |   |     1 | 0x20300 | 0x210 | PSP_FW_BOOT_LOADER~0x1 |          0 |        0 |     $PS1 |  00.00.00.00 | signed, SIG_UNKNOWN |   0x0 | 687e6f9231ed829c91750f8726eb7eb6 |       0x110 |       0x0 |       0x210 |       0x0 |
+--+---+-------+---------+-------+------------------------+------------+----------+----------+--------------+---------------------+-------+----------------------------------+-------------+-----------+-------------+-----------+
