crates/psptool-cli/tests/snapshots/synthetic__search_keys_synthetic.snap
---
source: crates/psptool-cli/tests/synthetic.rs
expression: stdout
---
0x00020080  a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1a1  modulus=256  structured(d0.e0)
